# clipforge-PAKT

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.githooks/: commit-msg
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-playground.yml  desktop-dev.yml  enforce-no-coauthor.yml  publish-pakt-npm.yml  release.yml  sponsor-badge-watch.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/src/: clipboard.rs  history.rs  hotkeys.rs  lib.rs  main.rs  stats.rs  tray.rs
apps/extension/: build.mjs  manifest.json  package.json  popup.html  tsconfig.json  vite.config.ts
apps/playground/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: BENCHMARK-SNAPSHOT.md  GETTING-STARTED.md  PAKT-FORMAT-SPEC.md  PAKT-PAPER.md  algorithms-mixed-packer.md  algorithms.md  chitragupta-integration.md  examples.md  research.md  token-efficiency-roadmap.md  wip-production-readiness.md
docs/articles/: compressibility-scoring.md  delta-encoding-for-homogeneous-arrays.md  query-aware-compression.md  research-landscape-2024-2026.md  tfidf-prefilter-and-sinkhorn-allocation.md
docs/research/: 2026-06-012-upgrade-proposal.md  2026-06-future-features.md  2026-06-polyglot-port-options.md
scripts/: chitragupta-hook.sh  generate_clipforge_icons.py
(+107 files in other folders)
